core/roboconf-core/src/test/resources/configurations/invalid/cycle-in-facet.graph
A {
	facets: F1;
	installer: target;
}

B {
	installer: target;
}

# Cycle: f1 -> f2 -> f3 -> f1
facet F1 {
	exports: ip;
	extends: F2;
}

facet F2 {
	exports: ip;
	extends: F3;
}

facet F3 {
	exports: ip;
	extends: F1;
}
